--- a/service-miya/src/main/resources/application.yml
+++ b/service-miya/src/main/resources/application.yml
@@ -1,4 +1,4 @@
 
-#server.port: 8989
-#spring.zipkin.base-url: http://localhost:9411
-#spring.application.name: service-miya
+server.port: 8989
+spring.zipkin.base-url: http://localhost:9411
+spring.application.name: service-miya
